<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="95dp"
        android:layout_marginTop="68dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_app" />

    <LinearLayout
        android:layout_width="342dp"
        android:layout_height="418dp"
        android:layout_marginTop="120dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <EditText
            android:id="@+id/txt_correo"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:autofillHints=""
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_email_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/Correo"
            android:inputType="textEmailAddress"
            android:paddingStart="12sp"
            android:paddingEnd="12sp" />

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_password_icon"
            android:drawablePadding="12dp"

            android:ems="10"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
            android:paddingStart="12sp"
            android:paddingEnd="12sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="110dp"
            android:backgroundTint="@color/lila"
            android:text="@string/login"
            android:textSize="16sp"
            app:cornerRadius="12sp" />

        <TextView
            android:id="@+id/txt_crear_cuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/signUp"
            android:textColor="#515151"
            android:textSize="16sp"
            android:textStyle="italic" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>