<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RnumericoInicio">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/transparente"
        app:title=""
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="285dp"
        android:layout_height="85dp"
        android:layout_marginTop="100dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_app" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="290dp"
        android:layout_height="85dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="#504CDC"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="74dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:backgroundTint="#851414"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/numerico" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical"
                android:layout_weight="1"
                android:text="@string/rnumerico"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnIniciarLogico"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="96dp"
        android:backgroundTint="@color/verde"
        android:text="@string/iniciarCustionario"
        android:textColor="#FFFFFF"
        app:icon="@drawable/ic_iniciar"
        app:iconSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnVerRecordsLogico"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/rojo"
        android:text="@string/verRecords"
        app:icon="@drawable/trofeo"
        app:iconSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIniciarLogico" />

</androidx.constraintlayout.widget.ConstraintLayout>